--- a/src/app/templates/pages/admin/admin.component.html
+++ b/src/app/templates/pages/admin/admin.component.html
@@ -29,7 +29,7 @@
     
     <div class="form-group">
       <label for="date">Date:</label>
-      <input type="text" id="date" formControlName="date" class="form-control">
+      <input type="month" id="date" formControlName="date" class="form-control">
       @if (submitted && projectForm.get('date')?.errors) {
         <div class="error">Date is required</div>
       }
