--- a/src/app/templates/pages/projects/projects.component.html
+++ b/src/app/templates/pages/projects/projects.component.html
@@ -6,7 +6,11 @@
   <div class="projects-header">
     <div class="search-filters-container">
       <div class="search-container">
-        <input type="text" [(ngModel)]="searchTerm" placeholder="Search projects..." (keyup.enter)="searchProjects()" />
+        <input type="text" 
+        [(ngModel)]="searchTerm" 
+        placeholder="Search projects..." 
+        (input)="updateSearch(searchTerm)"
+        (keyup.enter)="searchProjects()" />
         <button (click)="searchProjects()">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="10" cy="10" r="7"></circle><line x1="21" y1="21" x2="15.8" y2="15.8"></line></svg>
         </button>
