--- a/src/app/templates/pages/admin/admin.component.html
+++ b/src/app/templates/pages/admin/admin.component.html
@@ -1,4 +1,8 @@
-<div class="admin-container">  
+<div class="admin-container">
+  <div class="bg"></div>
+  <div class="bg bg2"></div>
+  <div class="bg bg3"></div>
+  
   <div class="admin-header">
     <h1>{{ pageTitle }}</h1>
     <div>
