fix: permanent loading because canActivate values placed in the wrong order

--- a/src/styles.css
+++ b/src/styles.css
@@ -55,3 +55,12 @@ body {
   cursor: pointer;
   border: none;
 }
+
+@keyframes slide {
+  0% {
+    transform: translateX(-25%);
+  }
+  100% {
+    transform: translateX(25%);
+  }
+}
