feat: made a global class to play sound and added a gif for piano music

--- a/src/app/templates/components/github-stats/github-stats.component.html
+++ b/src/app/templates/components/github-stats/github-stats.component.html
@@ -13,7 +13,7 @@
 
     <!-- Windows XP Taskbar -->
     <div class="windows-taskbar">
-      <div class="start-button" (click)="globalService.playSound('assets/sounds/windows-xp-startup.mp3', 0.85)">
+      <div class="start-button" (click)="musicPlayer.play()">
         <img src="assets/images/icons/winxp-start.png" alt="Start" class="start-logo">
       </div>
       <div class="taskbar-time">
