--- a/src/app/templates/components/hobbies/hobbies.component.html
+++ b/src/app/templates/components/hobbies/hobbies.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class="hobbie-image" *ngIf="!hobby.replaceBackground">
           <div>
-            <img class="piano" [src]="hobby.imageUrl" [alt]="hobby.title" (click)="playPiano()">
+            <img class="piano" [ngClass]="{'piano-shake': isPianoPlaying}" [src]="hobby.imageUrl" [alt]="hobby.title" (click)="playPiano()">
             <img class="music-notes" src="assets/images/hobbies/music-notes.gif" alt="Music Notes" class="music-notes" *ngIf="isPianoPlaying">
           </div>
         </div>
