--- a/src/app/templates/components/github-stats/github-stats.component.css
+++ b/src/app/templates/components/github-stats/github-stats.component.css
@@ -434,6 +434,35 @@ h2 {
     width: 100%;
     max-width: 450px;
   }
+
+  .github-stats-container {
+    padding: 40px 20px;
+    gap: 20px;
+  }
+
+  .github-stats-info {
+    display: none;
+  }
+
+  .windows-modal.active {
+    width: 90%;
+  }
+
+  .window-content {
+    padding: 8px;
+  }
+
+  .icon-card {
+    width: 120px;
+  }
+
+  .icon-text-desc {
+    font-size: 1rem;
+  }
+
+  .icon-text-value {
+    font-size: 50px;
+  }
 }
 
 @media screen and (min-aspect-ratio: 16/9) {
