--- a/src/app/templates/components/hobbies/hobbies.component.css
+++ b/src/app/templates/components/hobbies/hobbies.component.css
@@ -172,3 +172,44 @@
     margin-right: 35px;
   }
 }
+@media (max-width: 768px) {
+  .hobbie-element {
+    flex-direction: column;
+    padding: 20px;
+    width: 100%;
+    background: linear-gradient(to bottom, 
+                rgba(255, 255, 255, 0.9) 0%,
+                rgba(140, 140, 140, 0.9) calc(100% - 200px), 
+                transparent 100%),
+                url(/assets/images/backgrounds/notes-musique-tableau-flou-3.jpg);
+    background-size: cover;
+    background-position: center;
+  }
+
+  .hobbie-desc {
+    width: 100%;
+    align-items: center;
+    text-align: center;
+    overflow: auto;
+    margin-bottom: 20px;
+    position: relative;
+    z-index: 5;
+  }
+
+  .hobbie-image {
+    width: 100%;
+    margin-right: 0;
+    position: relative;
+    z-index: 1;
+  }
+
+  .hobbie-image div {
+    width: 100%;
+    height: 100%;
+  }
+
+  .piano {
+    height: auto;
+    width: 100%;
+  }
+}
